Construção de Compiladores/8 - Contrução de compiladores/8 - Contrução de compiladores/Tradutor parte 2/bin/sintatica.output
Nonterminals useless in grammar

    auxfuncao2


Rules useless in grammar

  129 auxfuncao2: comandos retornofuncao
  130           | retornofuncao


Rules useless in parser due to conflicts

   65 exp: TK_ID


State 5 conflicts: 1 shift/reduce
State 8 conflicts: 2 shift/reduce, 4 reduce/reduce
State 12 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 44 conflicts: 54 shift/reduce, 142 reduce/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 45 shift/reduce
State 57 conflicts: 45 shift/reduce
State 58 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 66 conflicts: 46 shift/reduce, 81 reduce/reduce
State 104 conflicts: 1 shift/reduce, 80 reduce/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 55 shift/reduce, 71 reduce/reduce
State 107 conflicts: 1 shift/reduce
State 109 conflicts: 16 shift/reduce
State 112 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce, 80 reduce/reduce
State 119 conflicts: 1 shift/reduce, 86 reduce/reduce
State 127 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce
State 130 conflicts: 54 shift/reduce, 142 reduce/reduce
State 133 conflicts: 17 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 158 conflicts: 45 shift/reduce
State 159 conflicts: 2 shift/reduce
State 164 conflicts: 45 shift/reduce
State 165 conflicts: 45 shift/reduce
State 166 conflicts: 45 shift/reduce
State 167 conflicts: 45 shift/reduce
State 168 conflicts: 45 shift/reduce
State 169 conflicts: 45 shift/reduce
State 170 conflicts: 45 shift/reduce
State 171 conflicts: 45 shift/reduce
State 172 conflicts: 45 shift/reduce
State 173 conflicts: 45 shift/reduce
State 174 conflicts: 45 shift/reduce
State 175 conflicts: 45 shift/reduce
State 176 conflicts: 45 shift/reduce
State 177 conflicts: 45 shift/reduce
State 178 conflicts: 45 shift/reduce
State 179 conflicts: 45 shift/reduce
State 187 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce
State 196 conflicts: 55 shift/reduce, 71 reduce/reduce
State 197 conflicts: 1 shift/reduce
State 224 conflicts: 86 reduce/reduce
State 227 conflicts: 1 shift/reduce, 1 reduce/reduce
State 236 conflicts: 16 reduce/reduce
State 237 conflicts: 16 reduce/reduce
State 238 conflicts: 16 reduce/reduce
State 239 conflicts: 16 reduce/reduce
State 240 conflicts: 16 reduce/reduce
State 250 conflicts: 54 shift/reduce, 144 reduce/reduce
State 254 conflicts: 1 shift/reduce
State 255 conflicts: 1 shift/reduce
State 256 conflicts: 1 shift/reduce
State 257 conflicts: 1 shift/reduce
State 258 conflicts: 54 shift/reduce, 142 reduce/reduce
State 259 conflicts: 1 shift/reduce
State 260 conflicts: 1 shift/reduce
State 271 conflicts: 1 shift/reduce
State 275 conflicts: 1 shift/reduce
State 278 conflicts: 1 shift/reduce
State 289 conflicts: 54 shift/reduce, 140 reduce/reduce
State 290 conflicts: 1 shift/reduce
State 291 conflicts: 56 shift/reduce, 72 reduce/reduce
State 294 conflicts: 54 shift/reduce, 142 reduce/reduce
State 300 conflicts: 55 shift/reduce, 71 reduce/reduce
State 303 conflicts: 1 shift/reduce
State 309 conflicts: 54 shift/reduce, 70 reduce/reduce
State 310 conflicts: 54 shift/reduce, 142 reduce/reduce
State 311 conflicts: 1 shift/reduce
State 312 conflicts: 1 shift/reduce
State 313 conflicts: 54 shift/reduce, 144 reduce/reduce
State 314 conflicts: 54 shift/reduce, 72 reduce/reduce
State 315 conflicts: 1 shift/reduce
State 322 conflicts: 1 shift/reduce
State 323 conflicts: 1 shift/reduce
State 324 conflicts: 55 shift/reduce, 71 reduce/reduce
State 325 conflicts: 54 shift/reduce, 142 reduce/reduce
State 327 conflicts: 56 shift/reduce, 72 reduce/reduce
State 336 conflicts: 55 shift/reduce, 71 reduce/reduce
State 348 conflicts: 1 shift/reduce
State 349 conflicts: 1 shift/reduce
State 350 conflicts: 1 shift/reduce
State 352 conflicts: 54 shift/reduce, 142 reduce/reduce
State 353 conflicts: 54 shift/reduce, 142 reduce/reduce
State 354 conflicts: 54 shift/reduce, 142 reduce/reduce
State 355 conflicts: 55 shift/reduce, 71 reduce/reduce
State 356 conflicts: 55 shift/reduce, 71 reduce/reduce
State 357 conflicts: 55 shift/reduce, 71 reduce/reduce
State 358 conflicts: 1 shift/reduce
State 359 conflicts: 1 shift/reduce
State 360 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    2 endline: ε
    3        | TK_NL endline

    4 bloco_var: ε
    5          | TK_VAR endline lstids
    6          | TK_VAR lstids endline

    7 lstids: ε
    8       | TK_ID tipo endline
    9       | TK_ID TK_OP_VAR tipo endline lstids
   10       | TK_ID TK_VIRGULA lstids

   11 tipo: TK_TIPO_INTEIRO
   12     | TK_TIPO_LITERAL
   13     | TK_TIPO_CARACTER
   14     | TK_TIPO_LOGICO
   15     | TK_TIPO_REAL
   16     | TK_TIPO_NUMERICO

   17 bloco_subalgo: ε
   18              | subalgoritmo bloco_subalgo

   19 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline
   20             | TK_FUNCAO TK_ID TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL comandos retornofuncao TK_FIMFUNCAO TK_NL endline

   21 auxfuncao: TK_OP_VAR tipo TK_NL
   22          | tipo TK_NL

   23 arglist: ε
   24        | TK_ID TK_OP_VAR tipo arglist
   25        | TK_PONTO_VIRGULA arglist
   26        | TK_VAR arglist

   27 retornofuncao: TK_RETORNE endline
   28              | TK_RETORNE exp endline

   29 comandos: ε
   30         | comando endline
   31         | comandos comando

   32 comando: exp
   33        | TK_SE exp TK_ENTAO endline comandos TK_FIMSE endline
   34        | TK_SE exp TK_ENTAO endline comandos TK_SENAO endline comandos TK_FIMSE
   35        | TK_ENQUANTO exp TK_FACA TK_NL comandos TK_FIMENQUANTO endline
   36        | TK_REPITA TK_NL comandos TK_ATE exp TK_NL
   37        | TK_PARA TK_ID TK_DE TK_NUM_INT TK_ATE TK_NUM_INT passovariacao TK_FACA TK_NL endline comandos TK_FIMPARA endline
   38        | TK_PARA TK_ID TK_DE TK_NUM_INT TK_ATE TK_ID passovariacao TK_FACA TK_NL endline comandos TK_FIMPARA endline
   39        | TK_ESCOLHA TK_ID TK_NL caselist TK_FIMESCOLHA
   40        | TK_PARA TK_ID TK_DE exp TK_ATE exp passovariacao TK_FACA TK_NL endline comandos TK_FIMPARA endline
   41        | comandoIO endline
   42        | predefinedFuncions endline
   43        | retornofuncao endline
   44        | TK_ID TK_OP TK_CP
   45        | TK_ID TK_OP constantlist TK_CP

   46 passovariacao: ε
   47              | TK_PASSO TK_NUM_INT
   48              | TK_PASSO TK_OP_SUB TK_NUM_INT

   49 caselist: TK_CASO constant TK_NL comandos caselist
   50         | TK_OUTROCASO TK_NL comandos

   51 constantlist: constant
   52             | constant TK_VIRGULA constantlist

   53 constant: TK_NUM
   54         | TK_NUM_INT
   55         | TK_ID
   56         | VLR_STRING
   57         | VLR_CHARACTER
   58         | TK_CONST_FALSO
   59         | TK_CONST_VERDADEIRO

   60 explist: exp
   61        | exp TK_VIRGULA explist

   62 exp: TK_ID TK_OP_ATRIB factor
   63    | TK_ID TK_OP_ATRIB exp
   64    | factor
   65    | TK_ID
   66    | exp TK_OP_ADD exp
   67    | exp TK_OP_SUB exp
   68    | exp TK_OP_LT exp
   69    | exp TK_OP_LTEQ exp
   70    | exp TK_OP_GT exp
   71    | exp TK_OP_GTEQ exp
   72    | exp TK_OP_EQ exp
   73    | exp TK_OP_NOTEQ exp
   74    | exp TK_OP_E exp
   75    | exp TK_OP_OU exp
   76    | exp TK_OP_XOU exp
   77    | TK_OP_NAO exp

   78 factor: term
   79       | exp TK_OP_MUL factor
   80       | exp TK_OP_DIV factor
   81       | exp TK_OP_MOD factor
   82       | exp TK_OP_DIV_INT factor
   83       | exp TK_OP_EXP factor

   84 term: constant
   85     | TK_OP exp TK_CP
   86     | TK_OP_SUB exp
   87     | TK_ID TK_OP explist TK_CP
   88     | predefinedFuncions

   89 comandoIO: ε
   90          | TK_ESCREVA TK_OP explist TK_CP endline
   91          | TK_ESCREVAL TK_OP explist TK_CP endline
   92          | TK_LEIA TK_OP TK_ID TK_CP endline

   93 predefinedFuncions: ε
   94                   | TK_ABS TK_OP exp TK_CP
   95                   | TK_ARCCOS TK_OP exp TK_CP
   96                   | TK_ARCSEN TK_OP exp TK_CP
   97                   | TK_ARCTAN TK_OP exp TK_CP
   98                   | TK_ASC TK_OP exp TK_CP
   99                   | TK_COMPR TK_OP exp TK_CP
  100                   | TK_COPIA TK_OP exp TK_VIRGULA exp TK_VIRGULA exp TK_CP
  101                   | TK_COS TK_OP exp TK_CP
  102                   | TK_COTAN TK_OP exp TK_CP
  103                   | TK_EXP TK_OP exp TK_VIRGULA exp TK_CP
  104                   | TK_GRAUPRAD TK_OP exp TK_CP
  105                   | TK_FUN_INT TK_OP exp TK_CP
  106                   | TK_INTERROMPA
  107                   | TK_LOG TK_OP exp TK_CP
  108                   | TK_LOGN TK_OP exp TK_CP
  109                   | TK_MAIUSC TK_OP exp TK_CP
  110                   | TK_MINUSC TK_OP exp TK_CP
  111                   | TK_NUMPCARAC TK_OP exp TK_CP
  112                   | TK_PI
  113                   | TK_POS TK_OP exp TK_VIRGULA exp TK_CP
  114                   | TK_QUAD TK_OP exp TK_CP
  115                   | TK_RADPGRAU TK_OP exp TK_CP
  116                   | TK_RAIZQ TK_OP exp TK_CP
  117                   | TK_RAND
  118                   | TK_RANDI TK_OP exp TK_CP
  119                   | TK_SEN TK_OP exp TK_CP
  120                   | TK_TAN TK_OP exp TK_CP
  121                   | TK_ALEATORIO
  122                   | TK_CRONOMETRO
  123                   | TK_DEBUG
  124                   | TK_ECO
  125                   | TK_PAUSA
  126                   | TK_TIMER
  127                   | TK_ARQUIVO
  128                   | TK_MENSAGEM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VLR_STRING (258) 1 56
    VLR_CHARACTER (259) 57
    TK_ALGORITMO (260) 1
    TK_INICIO (261) 1 19 20
    TK_FIMALGORITMO (262) 1
    TK_VAR (263) 5 6 26
    TK_TIPO_INTEIRO (264) 11
    TK_TIPO_LITERAL (265) 12
    TK_TIPO_CARACTER (266) 13
    TK_TIPO_LOGICO (267) 14
    TK_TIPO_REAL (268) 15
    TK_TIPO_NUMERICO (269) 16
    TK_OP_ATRIB (270) 62 63
    TK_OP (271) 19 20 44 45 85 87 90 91 92 94 95 96 97 98 99 100 101 102 103 104 105 107 108 109 110 111 113 114 115 116 118 119 120
    TK_CP (272) 19 20 44 45 85 87 90 91 92 94 95 96 97 98 99 100 101 102 103 104 105 107 108 109 110 111 113 114 115 116 118 119 120
    TK_OP_VAR (273) 9 21 24
    TK_VIRGULA (274) 10 52 61 100 103 113
    TK_PONTO_VIRGULA (275) 25
    TK_OP_E (276) 74
    TK_OP_NAO (277) 77
    TK_OP_OU (278) 75
    TK_OP_XOU (279) 76
    TK_CONST_FALSO (280) 58
    TK_CONST_VERDADEIRO (281) 59
    TK_OP_ADD (282) 66
    TK_OP_SUB (283) 48 67 86
    TK_UMINUS (284)
    TK_OP_MUL (285) 79
    TK_OP_DIV (286) 80
    TK_OP_DIV_INT (287) 82
    TK_OP_MOD (288) 81
    TK_OP_EXP (289) 83
    TK_OP_GT (290) 70
    TK_OP_GTEQ (291) 71
    TK_OP_LT (292) 68
    TK_OP_LTEQ (293) 69
    TK_OP_EQ (294) 72
    TK_OP_NOTEQ (295) 73
    TK_SE (296) 33 34
    TK_ENTAO (297) 33 34
    TK_SENAO (298) 34
    TK_FIMSE (299) 33 34
    TK_ESCOLHA (300) 39
    TK_CASO (301) 49
    TK_OUTROCASO (302) 50
    TK_FIMESCOLHA (303) 39
    TK_LEIA (304) 92
    TK_ESCREVA (305) 90
    TK_ESCREVAL (306) 91
    TK_ENQUANTO (307) 35
    TK_FIMENQUANTO (308) 35
    TK_REPITA (309) 36
    TK_PARA (310) 37 38 40
    TK_DE (311) 37 38 40
    TK_ATE (312) 36 37 38 40
    TK_PASSO (313) 47 48
    TK_FACA (314) 35 37 38 40
    TK_FIMPARA (315) 37 38 40
    TK_FUNCAO (316) 20
    TK_FIMFUNCAO (317) 20
    TK_RETORNE (318) 27 28
    TK_INTERROMPA (319) 106
    TK_PROCEDIMENTO (320) 19
    TK_FIMPROCEDIMENTO (321) 19
    TK_SEN (322) 119
    TK_COS (323) 101
    TK_TAN (324) 120
    TK_ARCSEN (325) 96
    TK_ARCCOS (326) 95
    TK_ARCTAN (327) 97
    TK_COTAN (328) 102
    TK_GRAUPRAD (329) 104
    TK_RADPGRAU (330) 115
    TK_EXP (331) 103
    TK_RAIZQ (332) 116
    TK_LOG (333) 107
    TK_LOGN (334) 108
    TK_POS (335) 113
    TK_ASC (336) 98
    TK_COMPR (337) 99
    TK_COPIA (338) 100
    TK_MAIUSC (339) 109
    TK_MINUSC (340) 110
    TK_NUMPCARAC (341) 111
    TK_ALEATORIO (342) 121
    TK_RAND (343) 117
    TK_RANDI (344) 118
    TK_ABS (345) 94
    TK_PI (346) 112
    TK_QUAD (347) 114
    TK_FUN_INT (348) 105
    TK_CRONOMETRO (349) 122
    TK_DEBUG (350) 123
    TK_ECO (351) 124
    TK_PAUSA (352) 125
    TK_TIMER (353) 126
    TK_ARQUIVO (354) 127
    TK_MENSAGEM (355) 128
    TK_NL (356) 1 3 19 20 21 22 35 36 37 38 39 40 49 50
    TK_NUM (357) 53
    TK_NUM_INT (358) 37 38 47 48 54
    TK_ID (359) 8 9 10 19 20 24 37 38 39 40 44 45 55 62 63 65 87 92


Nonterminals, with rules where they appear

    $accept (105)
        on left: 0
    programa (106)
        on left: 1
        on right: 0
    endline (107)
        on left: 2 3
        on right: 1 3 5 6 8 9 19 20 27 28 30 33 34 35 37 38 40 41 42 43 90 91 92
    bloco_var (108)
        on left: 4 5 6
        on right: 1 19 20
    lstids (109)
        on left: 7 8 9 10
        on right: 5 6 9 10
    tipo (110)
        on left: 11 12 13 14 15 16
        on right: 8 9 21 22 24
    bloco_subalgo (111)
        on left: 17 18
        on right: 1 18
    subalgoritmo (112)
        on left: 19 20
        on right: 18
    auxfuncao (113)
        on left: 21 22
        on right: 20
    arglist (114)
        on left: 23 24 25 26
        on right: 19 20 24 25 26
    retornofuncao (115)
        on left: 27 28
        on right: 20 43
    comandos (116)
        on left: 29 30 31
        on right: 1 19 20 31 33 34 35 36 37 38 40 49 50
    comando (117)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 30 31
    passovariacao (118)
        on left: 46 47 48
        on right: 37 38 40
    caselist (119)
        on left: 49 50
        on right: 39 49
    constantlist (120)
        on left: 51 52
        on right: 45 52
    constant (121)
        on left: 53 54 55 56 57 58 59
        on right: 49 51 52 84
    explist (122)
        on left: 60 61
        on right: 61 87 90 91
    exp (123)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 28 32 33 34 35 36 40 60 61 63 66 67 68 69 70 71 72 73 74 75 76 77 79 80 81 82 83 85 86 94 95 96 97 98 99 100 101 102 103 104 105 107 108 109 110 111 113 114 115 116 118 119 120
    factor (124)
        on left: 78 79 80 81 82 83
        on right: 62 64 79 80 81 82 83
    term (125)
        on left: 84 85 86 87 88
        on right: 78
    comandoIO (126)
        on left: 89 90 91 92
        on right: 41
    predefinedFuncions (127)
        on left: 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128
        on right: 42 88


State 0

    0 $accept: • programa $end

    TK_ALGORITMO  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TK_ALGORITMO • VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    VLR_STRING  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    1 programa: TK_ALGORITMO VLR_STRING • endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 5

    $default  reduce using rule 2 (endline)

    endline  go to state 6


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    3 endline: TK_NL • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 7


State 6

    1 programa: TK_ALGORITMO VLR_STRING endline • bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_VAR  shift, and go to state 8

    $default  reduce using rule 4 (bloco_var)

    bloco_var  go to state 9


State 7

    3 endline: TK_NL endline •

    $default  reduce using rule 3 (endline)


State 8

    5 bloco_var: TK_VAR • endline lstids
    6          | TK_VAR • lstids endline

    TK_NL  shift, and go to state 5
    TK_ID  shift, and go to state 10

    TK_INICIO        reduce using rule 2 (endline)
    TK_INICIO        [reduce using rule 7 (lstids)]
    TK_FUNCAO        reduce using rule 2 (endline)
    TK_FUNCAO        [reduce using rule 7 (lstids)]
    TK_PROCEDIMENTO  reduce using rule 2 (endline)
    TK_PROCEDIMENTO  [reduce using rule 7 (lstids)]
    TK_NL            [reduce using rule 2 (endline)]
    TK_NL            [reduce using rule 7 (lstids)]
    TK_ID            [reduce using rule 2 (endline)]
    $default         reduce using rule 2 (endline)

    endline  go to state 11
    lstids   go to state 12


State 9

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var • bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_FUNCAO        shift, and go to state 13
    TK_PROCEDIMENTO  shift, and go to state 14

    $default  reduce using rule 17 (bloco_subalgo)

    bloco_subalgo  go to state 15
    subalgoritmo   go to state 16


State 10

    8 lstids: TK_ID • tipo endline
    9       | TK_ID • TK_OP_VAR tipo endline lstids
   10       | TK_ID • TK_VIRGULA lstids

    TK_TIPO_INTEIRO   shift, and go to state 17
    TK_TIPO_LITERAL   shift, and go to state 18
    TK_TIPO_CARACTER  shift, and go to state 19
    TK_TIPO_LOGICO    shift, and go to state 20
    TK_TIPO_REAL      shift, and go to state 21
    TK_TIPO_NUMERICO  shift, and go to state 22
    TK_OP_VAR         shift, and go to state 23
    TK_VIRGULA        shift, and go to state 24

    tipo  go to state 25


State 11

    5 bloco_var: TK_VAR endline • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 26


State 12

    6 bloco_var: TK_VAR lstids • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 27


State 13

   20 subalgoritmo: TK_FUNCAO • TK_ID TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL comandos retornofuncao TK_FIMFUNCAO TK_NL endline

    TK_ID  shift, and go to state 28


State 14

   19 subalgoritmo: TK_PROCEDIMENTO • TK_ID TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_ID  shift, and go to state 29


State 15

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo • TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_INICIO  shift, and go to state 30


State 16

   18 bloco_subalgo: subalgoritmo • bloco_subalgo

    TK_FUNCAO        shift, and go to state 13
    TK_PROCEDIMENTO  shift, and go to state 14

    $default  reduce using rule 17 (bloco_subalgo)

    bloco_subalgo  go to state 31
    subalgoritmo   go to state 16


State 17

   11 tipo: TK_TIPO_INTEIRO •

    $default  reduce using rule 11 (tipo)


State 18

   12 tipo: TK_TIPO_LITERAL •

    $default  reduce using rule 12 (tipo)


State 19

   13 tipo: TK_TIPO_CARACTER •

    $default  reduce using rule 13 (tipo)


State 20

   14 tipo: TK_TIPO_LOGICO •

    $default  reduce using rule 14 (tipo)


State 21

   15 tipo: TK_TIPO_REAL •

    $default  reduce using rule 15 (tipo)


State 22

   16 tipo: TK_TIPO_NUMERICO •

    $default  reduce using rule 16 (tipo)


State 23

    9 lstids: TK_ID TK_OP_VAR • tipo endline lstids

    TK_TIPO_INTEIRO   shift, and go to state 17
    TK_TIPO_LITERAL   shift, and go to state 18
    TK_TIPO_CARACTER  shift, and go to state 19
    TK_TIPO_LOGICO    shift, and go to state 20
    TK_TIPO_REAL      shift, and go to state 21
    TK_TIPO_NUMERICO  shift, and go to state 22

    tipo  go to state 32


State 24

   10 lstids: TK_ID TK_VIRGULA • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 33


State 25

    8 lstids: TK_ID tipo • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 34


State 26

    5 bloco_var: TK_VAR endline lstids •

    $default  reduce using rule 5 (bloco_var)


State 27

    6 bloco_var: TK_VAR lstids endline •

    $default  reduce using rule 6 (bloco_var)


State 28

   20 subalgoritmo: TK_FUNCAO TK_ID • TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL comandos retornofuncao TK_FIMFUNCAO TK_NL endline

    TK_OP  shift, and go to state 35


State 29

   19 subalgoritmo: TK_PROCEDIMENTO TK_ID • TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_OP  shift, and go to state 36


State 30

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO • TK_NL endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 37


State 31

   18 bloco_subalgo: subalgoritmo bloco_subalgo •

    $default  reduce using rule 18 (bloco_subalgo)


State 32

    9 lstids: TK_ID TK_OP_VAR tipo • endline lstids

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 38


State 33

   10 lstids: TK_ID TK_VIRGULA lstids •

    $default  reduce using rule 10 (lstids)


State 34

    8 lstids: TK_ID tipo endline •

    $default  reduce using rule 8 (lstids)


State 35

   20 subalgoritmo: TK_FUNCAO TK_ID TK_OP • arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL comandos retornofuncao TK_FIMFUNCAO TK_NL endline

    TK_VAR            shift, and go to state 39
    TK_PONTO_VIRGULA  shift, and go to state 40
    TK_ID             shift, and go to state 41

    $default  reduce using rule 23 (arglist)

    arglist  go to state 42


State 36

   19 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP • arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_VAR            shift, and go to state 39
    TK_PONTO_VIRGULA  shift, and go to state 40
    TK_ID             shift, and go to state 41

    $default  reduce using rule 23 (arglist)

    arglist  go to state 43


State 37

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL • endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 44


State 38

    9 lstids: TK_ID TK_OP_VAR tipo endline • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 45


State 39

   26 arglist: TK_VAR • arglist

    TK_VAR            shift, and go to state 39
    TK_PONTO_VIRGULA  shift, and go to state 40
    TK_ID             shift, and go to state 41

    $default  reduce using rule 23 (arglist)

    arglist  go to state 46


State 40

   25 arglist: TK_PONTO_VIRGULA • arglist

    TK_VAR            shift, and go to state 39
    TK_PONTO_VIRGULA  shift, and go to state 40
    TK_ID             shift, and go to state 41

    $default  reduce using rule 23 (arglist)

    arglist  go to state 47


State 41

   24 arglist: TK_ID • TK_OP_VAR tipo arglist

    TK_OP_VAR  shift, and go to state 48


State 42

   20 subalgoritmo: TK_FUNCAO TK_ID TK_OP arglist • TK_CP auxfuncao bloco_var TK_INICIO TK_NL comandos retornofuncao TK_FIMFUNCAO TK_NL endline

    TK_CP  shift, and go to state 49


State 43

   19 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP arglist • TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_CP  shift, and go to state 50


State 44

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline • comandos TK_FIMALGORITMO endline

    VLR_STRING           shift, and go to state 51
    VLR_CHARACTER        shift, and go to state 52
    TK_OP                shift, and go to state 53
    TK_OP_NAO            shift, and go to state 54
    TK_CONST_FALSO       shift, and go to state 55
    TK_CONST_VERDADEIRO  shift, and go to state 56
    TK_OP_SUB            shift, and go to state 57
    TK_SE                shift, and go to state 58
    TK_ESCOLHA           shift, and go to state 59
    TK_LEIA              shift, and go to state 60
    TK_ESCREVA           shift, and go to state 61
    TK_ESCREVAL          shift, and go to state 62
    TK_ENQUANTO          shift, and go to state 63
    TK_REPITA            shift, and go to state 64
    TK_PARA              shift, and go to state 65
    TK_RETORNE           shift, and go to state 66
    TK_INTERROMPA        shift, and go to state 67
    TK_SEN               shift, and go to state 68
    TK_COS               shift, and go to state 69
    TK_TAN               shift, and go to state 70
    TK_ARCSEN            shift, and go to state 71
    TK_ARCCOS            shift, and go to state 72
    TK_ARCTAN            shift, and go to state 73
    TK_COTAN             shift, and go to state 74
    TK_GRAUPRAD          shift, and go to state 75
    TK_RADPGRAU          shift, and go to state 76
    TK_EXP               shift, and go to state 77
    TK_RAIZQ             shift, and go to state 78
    TK_LOG               shift, and go to state 79
    TK_LOGN              shift, and go to state 80
    TK_POS               shift, and go to state 81
    TK_ASC               shift, and go to state 82
    TK_COMPR             shift, and go to state 83
    TK_COPIA             shift, and go to state 84
    TK_MAIUSC            shift, and go to state 85
    TK_MINUSC            shift, and go to state 86
    TK_NUMPCARAC         shift, and go to state 87
    TK_ALEATORIO         shift, and go to state 88
    TK_RAND              shift, and go to state 89
    TK_RANDI             shift, and go to state 90
    TK_ABS               shift, and go to state 91
    TK_PI                shift, and go to state 92
    TK_QUAD              shift, and go to state 93
    TK_FUN_INT           shift, and go to state 94
    TK_CRONOMETRO        shift, and go to state 95
    TK_DEBUG             shift, and go to state 96
    TK_ECO               shift, and go to state 97
    TK_PAUSA             shift, and go to state 98
    TK_TIMER             shift, and go to state 99
    TK_ARQUIVO           shift, and go to state 100
    TK_MENSAGEM          shift, and go to state 101
    TK_NUM               shift, and go to state 102
    TK_NUM_INT           shift, and go to state 103
    TK_ID                shift, and go to state 104
